app-2/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 2345
      - path: /backend        
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
